test/tests/compiler/5_local_variables/valid/short_circuit_and_fail.plx






pub fn main(none) i32 {
    a: i32 = 0
    0 and (a = 5)
    return a
}
