test/tests/compiler/5_local_variables/invalid_parse/plx1_pub_fn_local_var.plx
pub fn main(none) i32 {
    pub fn a: i32 = 1
    return a
}
